adding SBLY_CopyLineItems.php

--- a/examples/Dfp/adsapi_php.ini
+++ b/examples/Dfp/adsapi_php.ini
@@ -1,8 +1,8 @@
 [DFP]
 ; Required DFP API properties. Details can be found at:
 ; https://developers.google.com/doubleclick-publishers/docs/soap_xml
-networkCode = "INSERT_NETWORK_CODE_HERE"
-applicationName = "INSERT_APPLICATION_NAME_HERE"
+networkCode = "114792762"
+applicationName = "sbly-web"
 
 ; Optional additional DFP API settings.
 ; endpoint = "https://ads.google.com/"
@@ -15,12 +15,11 @@ applicationName = "INSERT_APPLICATION_NAME_HERE"
 ; For service account flow.
 ; jsonKeyFilePath = "INSERT_ABSOLUTE_PATH_TO_OAUTH2_JSON_KEY_FILE_HERE"
 ; scopes = "https://www.googleapis.com/auth/dfp"
-; impersonatedEmail = "INSERT_EMAIL_OF_ACCOUNT_TO_IMPERSONATE_HERE"
 
 ; For installed application or web application flow.
-; clientId = "INSERT_OAUTH2_CLIENT_ID_HERE"
-; clientSecret = "INSERT_OAUTH2_CLIENT_SECRET_HERE"
-; refreshToken = "INSERT_OAUTH2_REFRESH_TOKEN_HERE"
+clientId = "262012709231-igu41bg7vul1hq3cinq8qdaj7aifbag1.apps.googleusercontent.com"
+clientSecret = "bVvzcwocEeENwmu2puP31oSd"
+refreshToken = "1/KyIHOY0d6VVp7p4HZXCcK238L75qVu5YnOEOW-MYeWJIgOrJDtdun6zK6XiATCKT"
 
 [SOAP]
 ; Optional SOAP settings. See SoapSettingsBuilder.php for more information.
